feat: 适配1panel部署docker容器

--- a/.env.template
+++ b/.env.template
@@ -7,4 +7,10 @@ WEBHOOK_URL="https://your-domain.com/webhook"
 DB_HOST=mysql
 DB_USER=botuser
 DB_PASSWORD=botpass
-DB_NAME=telegram_bot
+DB_NAME=tg_pm_bot
+
+# MySQL 服务配置
+MYSQL_ROOT_PASSWORD=root用户的密码
+MYSQL_DATABASE=tg_pm_bot
+MYSQL_USER=botuser
+MYSQL_PASSWORD=botpassword
