--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 annotated-types==0.7.0
 anyio==4.9.0
 certifi==2025.4.26
+cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.2.1
+cryptography==45.0.6
 fastapi==0.115.12
 h11==0.16.0
 httpcore==1.0.9
@@ -10,6 +12,7 @@ httpx==0.28.1
 idna==3.10
 mysql-connector-python==9.3.0
 pyaes==1.6.1
+pycparser==2.22
 pydantic==2.11.5
 pydantic_core==2.33.2
 PyMySQL==1.1.1
@@ -24,3 +27,4 @@ typing-inspection==0.4.1
 typing_extensions==4.14.0
 urllib3==2.4.0
 uvicorn==0.34.3
+wheel==0.45.1
