--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,44 @@ logs/
 mysql_backup/
 
 .DS_Store
+
+# Python 缓存文件
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+PYTHONPATH
+
+# 虚拟环境
+venv/
+ENV/
+env/
+.venv/
+
+# IDE 相关
+.vscode/
+*.swp
+*.swo
+*~
+
+# 测试覆盖率
+.coverage
+htmlcov/
+.tox/
+.pytest_cache/
